<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseGenderActiivity">


    <LinearLayout
        android:id="@id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/faustina_medium"
            android:letterSpacing="@dimen/logoLetterSpacing"
            android:text="@string/fit"
            android:textColor="@color/black"
            android:textSize="@dimen/LogoTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/faustina_medium"
            android:letterSpacing="@dimen/logoLetterSpacing"
            android:text="@string/kit"
            android:textColor="@color/red_button"
            android:textSize="@dimen/LogoTextSize" />
    </LinearLayout>

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:fontFamily="@font/faustina_medium"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="@dimen/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/male"
        android:src="@drawable/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageView
        android:id="@id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/female"
        android:src="@drawable/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@id/genderNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/red_button"
        android:fontFamily="@font/faustina_regular"
        android:paddingHorizontal="100dp"
        android:paddingVertical="10dp"
        android:radius="10dp"
        android:text="@string/next"
        android:textColor="@color/LogoTextColor"
        android:textSize="@dimen/RedButtonSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/faustina_medium"
        android:gravity="center"
        android:text="@string/to_give_you_a_better_experience_we_need_to_know_your_gender"
        android:textSize="@dimen/genderPolicy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderNextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>