<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/asian_women_are_exercising_gym_sift_through_leather_water_keeping_their_body_healthy_1"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/gradient" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main__title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/faustina_medium"
            android:gravity="center"
            android:letterSpacing="@dimen/logoLetterSpacing"
            android:text="@string/fitkit"
            android:textColor="@color/LogoTextColor"
            android:textSize="@dimen/LogoTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="297sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:textSize="@dimen/subtitleSize"
            android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting"
            android:textColor="@color/LogoTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main__title"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red_button"
            android:paddingHorizontal="100dp"
            android:paddingVertical="10dp"
            android:radius="10dp"
            android:fontFamily="@font/faustina_regular"
            android:text="@string/sign_up"
            android:textSize="@dimen/RedButtonSize"
            android:textColor="@color/LogoTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prod_by"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/LogoTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/redButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>