<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red_button"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/menu_icon"
                android:src="@drawable/menu_icon_figma"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/faustina_medium"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="@dimen/RedButtonSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/search"
                android:src="@drawable/glass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/faustina_medium"
        android:text="@string/workout_exercises"
        android:textColor="@color/light_black"
        android:textSize="@dimen/redButtonTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/abs_perfection"
            android:src="@drawable/abs_perfection" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/good_cardio"
            android:src="@drawable/good_cardio" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arms_stretching"
            android:src="@drawable/arms_stretching" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/faustina_medium"
        android:text="@string/training_plan"
        android:textColor="@color/light_black"
        android:textSize="@dimen/RedButtonSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="36dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/light_white"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/gym_attribute"
                    android:src="@drawable/gym" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="43dp"
                    android:fontFamily="@font/faustina_medium"
                    android:text="@string/shoulder_press"
                    android:textColor="@color/black"
                    android:textSize="@dimen/genderPolicy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="27dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/shoulder_press_description"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/exercises_description" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@color/light_white"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/gym_attribute"
                    android:src="@drawable/gym" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="43dp"
                    android:fontFamily="@font/faustina_medium"
                    android:text="@string/shoulder_press"
                    android:textColor="@color/black"
                    android:textSize="@dimen/genderPolicy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="27dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/shoulder_press_description"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/exercises_description" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@color/light_white"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/gym_attribute"
                    android:src="@drawable/gym" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="43dp"
                    android:fontFamily="@font/faustina_medium"
                    android:text="@string/shoulder_press"
                    android:textColor="@color/black"
                    android:textSize="@dimen/genderPolicy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="27dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/shoulder_press_description"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/exercises_description" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@color/light_white"
                android:orientation="vertical"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/gym_attribute"
                    android:src="@drawable/gym" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="43dp"
                    android:fontFamily="@font/faustina_medium"
                    android:text="@string/shoulder_press"
                    android:textColor="@color/black"
                    android:textSize="@dimen/genderPolicy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="27dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/shoulder_press_description"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/exercises_description" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:itemHorizontalTranslationEnabled="false"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>